Admin - Employee Profile Alignment Fixes - done

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -62,7 +62,7 @@ body {
 }
 .custom-input {
   input {
-    margin-bottom: 16px !important;
+    margin-bottom: 15px !important;
   }
 
   label {
